--- a/static-on-html/index.html
+++ b/static-on-html/index.html
@@ -18,10 +18,11 @@
         value="IES Francisco Ayala"
         look-at="[gps-camera]"
         scale="80 80 80"
-        gps-entity-place="latitude: 37.19196808094803; longitude: -3.6171872654682873;"
+        gps-entity-place="latitude: 37.191859445910616; longitude: -3.6168749693779674;"
       ></a-text>
-      <a-box material="color: yellow" gps-entity-place="latitude: 37.19219021640692; longitude: -3.6173989106522724"/>
-        <a-entity gps-entity-place="latitude: 37.1917675999061; longitude: -3.617034062312064;" gltf-model="./assets/magnemite/scene.gltf" rotation="0 180 0" animation-mixer scale="0.15 0.15 0.15"/>
-        <a-camera gps-camera rotation-reader></a-camera>
+      <a-box material="color: yellow" gps-entity-place="latitude: 37.192177911102405 ; longitude: -3.6173185559901695"/>
+        <a-entity gps-entity-place="latitude: 37.192054556565864; longitude: -3.617065199745315;" gltf-model="./assets/magnemite/scene.gltf" rotation="0 180 0" animation-mixer scale="0.15 0.15 0.15"/>
+   <a-entity gps-entity-place="latitude: 37.19180821239459; longitude: -3.6169570726382227;" gltf-model="../static-places/assets/articuno/scene.gltf" rotation="0 180 0" animation-mixer scale="0.15 0.15 0.15"/>
+	   <a-camera gps-camera rotation-reader></a-camera>
 	</a-scene>
 </body>
